Fixed scrollbars on rows and locked page's x scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
     
   }
   body {
-    @apply bg-[#141414] text-white;
+    @apply bg-[#141414] text-white overflow-x-hidden;
   }
   
   header {
